Add usage
-add Main class for simple database example
-change build.gradle to run Main